[gd_scene load_steps=24 format=3 uid="uid://1g43dvmxf5hh"]

[ext_resource type="Script" uid="uid://dg13oauy48vo7" path="res://enemy/enemy.gd" id="1_1wwld"]
[ext_resource type="Texture2D" uid="uid://bedycg7ncxhh8" path="res://enemy/slime.png" id="1_2mvqj"]
[ext_resource type="PackedScene" uid="uid://dtuwo2b8qi1nh" path="res://components/movement_component.tscn" id="4_p200p"]
[ext_resource type="PackedScene" uid="uid://dytqh10wawuk0" path="res://components/gravity_component.tscn" id="6_1wwld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rovcg"]
radius = 4.1231055

[sub_resource type="AtlasTexture" id="AtlasTexture_ofsxj"]
atlas = ExtResource("1_2mvqj")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppra6"]
atlas = ExtResource("1_2mvqj")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p200p"]
atlas = ExtResource("1_2mvqj")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmsee"]
atlas = ExtResource("1_2mvqj")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwld"]
atlas = ExtResource("1_2mvqj")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vj3"]
atlas = ExtResource("1_2mvqj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffra"]
atlas = ExtResource("1_2mvqj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e355f"]
atlas = ExtResource("1_2mvqj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78jik"]
atlas = ExtResource("1_2mvqj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3pv7"]
atlas = ExtResource("1_2mvqj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoplw"]
atlas = ExtResource("1_2mvqj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yflr"]
atlas = ExtResource("1_2mvqj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf88j"]
atlas = ExtResource("1_2mvqj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbw0t"]
atlas = ExtResource("1_2mvqj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjonb"]
atlas = ExtResource("1_2mvqj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_scxef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofsxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppra6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p200p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmsee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwld")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e355f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78jik")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3pv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoplw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yflr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf88j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbw0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjonb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_scxef"]
radius = 66.0
height = 132.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p200p"]
radius = 11.0
height = 22.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "movement_component", "chase_timer", "death_timer")]
script = ExtResource("1_1wwld")
gravity_component = NodePath("Gravity")
movement_component = NodePath("MovementComponent")
chase_timer = NodePath("detection_area/chase_tiimer")
death_timer = NodePath("death_timer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_rovcg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_scxef")
animation = &"death"
offset = Vector2(0, -6)

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, -6)
target_position = Vector2(0, 16)

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-8, -6)
target_position = Vector2(0, 16)

[node name="Gravity" parent="." instance=ExtResource("6_1wwld")]

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_scxef")

[node name="chase_tiimer" type="Timer" parent="detection_area"]

[node name="MovementComponent" parent="." instance=ExtResource("4_p200p")]

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_p200p")

[node name="death_timer" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="detection_area/chase_tiimer" to="." method="_on_chase_tiimer_timeout"]
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
